--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -1,40 +1,41 @@
+// .filters {
+//   margin-top: -15px;
 .filters {
-  margin-top: -15px;
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    @media screen and (min-width: 768px) {
-      justify-content: center;
-    }
+  display: flex;
+  flex-wrap: wrap;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
   }
-  &__list &__item + &__item {
+
+  & &__item + &__item {
     margin-left: 8px;
   }
   &__item {
     margin-top: 15px;
   }
-}
-.filters__button {
-  font-weight: var(--font-weight-medium);
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  background: var(--background-filters-button);
-  border-radius: 4px;
-  border: none;
-  padding: 6px 22px;
-  transition-property: color, background, box-shadow;
-  transition-duration: var(--timing-hover-focus);
-  transition-timing-function: var(--function-hover-focus);
-  &:focus,
-  &:hover {
-    background: var(--first-backlight-color);
-    color: var(--second-backlight-color);
-    box-shadow: 0px 2px 2px 0px #0000001f;
 
-    box-shadow: 0px 1px 2px 0px #00000014;
+  .filters__button {
+    font-weight: var(--font-weight-medium);
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    background: var(--background-filters-button);
+    border-radius: 4px;
+    border: none;
+    padding: 6px 22px;
+    transition-property: color, background, box-shadow;
+    transition-duration: var(--timing-hover-focus);
+    transition-timing-function: var(--function-hover-focus);
+    &:focus,
+    &:hover {
+      background: var(--first-backlight-color);
+      color: var(--second-backlight-color);
+      box-shadow: 0px 2px 2px 0px #0000001f;
 
-    box-shadow: 0px 3px 1px 0px #0000001a;
+      box-shadow: 0px 1px 2px 0px #00000014;
+
+      box-shadow: 0px 3px 1px 0px #0000001a;
+    }
   }
 }
