--- a/sass/layout/_footer-social.scss
+++ b/sass/layout/_footer-social.scss
@@ -1,5 +1,7 @@
 .footer-social {
   color: var(--text-white-color);
+  margin-top: 60px;
+
   &__list {
     display: flex;
     justify-content: center;
@@ -15,7 +17,6 @@
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-top: 60px;
     margin-bottom: 20px;
     text-align: center;
     @media screen and (min-width: 1200px) {
@@ -30,6 +31,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-left: 70px;
+    margin-top: 0;
   }
 }
 
