--- a/sass/layout/_futer-form.scss
+++ b/sass/layout/_futer-form.scss
@@ -1,17 +1,19 @@
 .footer-form-wrap {
+  margin-top: 60px;
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
+    margin-top: 0;
   }
 }
 .footer-form {
   color: var(--text-white-color);
+
   .footer-form__header {
     text-align: center;
     font-weight: var(--font-weight-bold);
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    margin-top: 60px;
     margin-bottom: 20px;
     @media screen and (min-width: 1200px) {
       text-align: start;
