--- a/sass/layout/_conditions.scss
+++ b/sass/layout/_conditions.scss
@@ -1,6 +1,7 @@
 .sections-conditions {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     padding-bottom: 0px;
+    margin-bottom: -30px;
   }
 }
 .conditions {
@@ -21,10 +22,12 @@
       display: flex;
       flex-wrap: wrap;
       margin-left: -30px;
+      margin-bottom: -30px;
     }
   }
 
   &__item {
+    margin-bottom: 30px;
     @media screen and (min-width: 768px) {
       width: calc(100% / 2 - 30px);
       margin-left: 30px;
@@ -34,7 +37,9 @@
       margin-left: 30px;
     }
   }
-
+  &__item:last-child {
+    margin-bottom: 0;
+  }
   &__subtitle {
     font-weight: var(--font-weight-bold);
     font-size: 14px;
@@ -50,7 +55,7 @@
   &__text {
     line-height: 1.7;
     width: 100%;
-    margin-bottom: 30px;
+
     letter-spacing: 0.03em;
     color: var(--text-color);
   }
