--- a/css/main.css
+++ b/css/main.css
@@ -457,6 +457,10 @@ body {
   overflow: hidden;
 }
 
+.header {
+  border-bottom: solid 1px #ececec;
+}
+
 .header--container {
   display: none;
 }
@@ -466,10 +470,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-    border-bottom: solid 1px #ececec;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -747,7 +750,7 @@ body {
   background-color: var(--background-color);
   padding-top: 118px;
   padding-bottom: 118px;
-  max-width: 100%;
+  max-width: 1600px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../image/header/Header-mob-1x.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/header/Header-mob-1x.jpg);
   background-repeat: no-repeat;
@@ -863,9 +866,10 @@ body {
   background: var(--btn-fokus);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .sections-conditions {
     padding-bottom: 0px;
+    margin-bottom: -30px;
   }
 }
 
@@ -898,7 +902,12 @@ body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin-left: -30px;
+    margin-bottom: -30px;
   }
+}
+
+.conditions__item {
+  margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -913,6 +922,10 @@ body {
     width: calc(100% / 4 - 30px);
     margin-left: 30px;
   }
+}
+
+.conditions__item:last-child {
+  margin-bottom: 0;
 }
 
 .conditions__subtitle {
@@ -933,7 +946,6 @@ body {
 .conditions__text {
   line-height: 1.7;
   width: 100%;
-  margin-bottom: 30px;
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
@@ -1013,14 +1025,15 @@ body {
 
 .team-header {
   font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
 }
 
 .team {
   margin-top: 50px;
+  margin-bottom: -30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1141,6 +1154,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin-left: -30px;
+  margin-bottom: -30px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1169,8 +1183,8 @@ body {
 
 .clients-header {
   font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 30px;
@@ -1284,6 +1298,9 @@ body {
 @media screen and (min-width: 1200px) {
   .footer-contacts {
     display: block;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -1383,8 +1400,6 @@ body {
 
 @media screen and (min-width: 1200px) {
   .footer-social-wrap {
-    margin-left: auto;
-    margin-right: auto;
     margin-left: 70px;
     margin-top: 0;
   }
@@ -1485,18 +1500,26 @@ body {
   .project {
     margin-top: 0;
     margin-left: -30px;
+    margin-bottom: -30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .project {
-    margin-top: 20px;
+    margin-top: 50px;
   }
 }
 
 .project__item {
   margin-top: 30px;
   width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item {
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
 }
 
 .project__wrap {
@@ -1538,7 +1561,7 @@ body {
   }
 }
 
-.project .project__link--first {
+.project__link--first {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1547,6 +1570,9 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .project__container {
