--- a/sass/layout/_footer-social.scss
+++ b/sass/layout/_footer-social.scss
@@ -31,8 +31,8 @@
 
 .footer-social-wrap {
   @media screen and (min-width: 1200px) {
-    margin-left: auto;
-    margin-right: auto;
+    // margin-left: auto;
+    // margin-right: auto;
     margin-left: 70px;
     margin-top: 0;
   }
