--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,11 @@
+.header {
+  border-bottom: solid 1px #ececec;
+}
 .header--container {
   display: none;
   @media screen and (min-width: 768px) {
     display: flex;
-    align-items: baseline;
-    border-bottom: solid 1px #ececec;
+    align-items: center;
   }
 }
 .header-mob {
