--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -7,14 +7,18 @@
   @media screen and (min-width: 768px) {
     margin-top: 0;
     margin-left: -30px;
+    margin-bottom: -30px;
   }
   @media screen and (min-width: 1200px) {
-    margin-top: 20px;
+    margin-top: 50px;
   }
-
   &__item {
     margin-top: 30px;
     width: 100%;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 30px;
+      margin-top: 0;
+    }
   }
   &__wrap {
     position: relative;
@@ -45,10 +49,11 @@
       margin-left: 30px;
     }
   }
-  .project__link--first {
+  &__link--first {
     display: flex;
     flex-direction: column;
     height: 100%;
+    flex-grow: 1;
   }
 
   &__container {
