--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,13 +3,14 @@
 }
 .team-header {
   font-weight: var(--font-weight-bold);
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
 }
 .team {
   margin-top: 50px;
+  margin-bottom: -30px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
