--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -7,7 +7,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../image/hero/hero-mob-1x.jpg);
+    url(./image/hero/hero-mob-1x.jpg);
 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -16,7 +16,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/hero/hero-mob-2x.jpg);
+      url(./image/hero/hero-mob-2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
@@ -24,7 +24,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/hero/hero-tab-1x.jpg);
+      url(./image/hero/hero-tab-1x.jpg);
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -33,14 +33,14 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/hero/hero-tab-2x.jpg);
+      url(./image/hero/hero-tab-2x.jpg);
   }
   @media screen and (min-width: 1200px) {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/hero/hero-desc-1x.jpg);
+      url(./image/hero/hero-desc-1x.jpg);
   }
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -49,7 +49,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../image/hero/hero-desc-2x.jpg);
+      url(./image/hero/hero-desc-2x.jpg);
   }
 
   background-repeat: no-repeat;
