--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -28,6 +28,10 @@
   letter-spacing: 0.03em;
   text-align: center;
   margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 .clients-list__link {
   display: flex;
