--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -3,8 +3,11 @@
 .filters {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -8px;
+  margin-top: -15px;
   @media screen and (min-width: 768px) {
     justify-content: center;
+    margin-top: 0;
   }
 
   & &__item + &__item {
@@ -12,6 +15,10 @@
   }
   &__item {
     margin-top: 15px;
+    margin-left: 8px;
+    @media screen and (min-width: 768px) {
+      margin-top: 0;
+    }
   }
 
   .filters__button {
