--- a/sass/layout/_footer-social.scss
+++ b/sass/layout/_footer-social.scss
@@ -16,6 +16,7 @@
     margin-left: 10px;
   }
   &__header {
+    font-size: 14px;
     font-weight: var(--font-weight-bold);
     line-height: 1.14;
     letter-spacing: 0.03em;
