--- a/sass/layout/_futer-form.scss
+++ b/sass/layout/_futer-form.scss
@@ -10,6 +10,7 @@
 
   .footer-form__header {
     text-align: center;
+    font-size: 14px;
     font-weight: var(--font-weight-bold);
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -22,7 +23,7 @@
   }
   .footer-form__list {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.25;
     @media screen and (min-width: 1200px) {
       display: flex;
     }
@@ -70,7 +71,9 @@
   border-radius: 4px;
   border: transparent;
   cursor: pointer;
-  margin-left: 12px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 12px;
+  }
   transition-property: background;
   transition-duration: var(--timing-hover-focus);
   transition-timing-function: var(--function-hover-focus);
