--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -1,11 +1,11 @@
 .project {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  margin-top: 40px;
   margin-bottom: -30px;
 
   @media screen and (min-width: 768px) {
-    margin-top: 0;
+    margin-top: 30px;
     margin-left: -30px;
     margin-bottom: -30px;
   }
@@ -13,7 +13,7 @@
     margin-top: 50px;
   }
   &__item {
-    margin-top: 30px;
+    margin-bottom: 30px;
     width: 100%;
     @media screen and (min-width: 1200px) {
       margin-bottom: 30px;
