--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,6 +7,10 @@
   line-height: 1.18;
   letter-spacing: 0.03em;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 .team {
   margin-top: 50px;
