--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -31,6 +31,7 @@
   @media screen and (min-width: 1200px) {
     font-size: 36px;
     line-height: 1.16;
+    margin-bottom: 50px;
   }
 }
 .clients-list__link {
