--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -22,8 +22,8 @@
   font-weight: var(--font-weight-bold);
   font-size: 24px;
   line-height: 1.17;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  // padding-top: 16px;
+  // padding-bottom: 16px;
   margin-bottom: 0;
   color: var(--first-backlight-color);
   @media screen and (min-width: 768px) {
@@ -47,8 +47,8 @@
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    // padding-top: 24px;
+    // padding-bottom: 25px;
     font-size: 26px;
     line-height: 1.19;
   }
@@ -78,16 +78,16 @@
     display: flex;
     font-size: 14px;
     line-height: 1.14;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    //   padding-top: 32px;
+    //   padding-bottom: 32px;
   }
 }
 
 .contacts {
   display: block;
   margin-left: auto;
-  padding-top: 21px;
-  padding-bottom: 21px;
+  // padding-top: 21px;
+  // padding-bottom: 21px;
   &__icon {
     fill: currentColor;
     margin-right: 10px;
